--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,21 @@
   padding: 0;
   box-sizing: border-box;
 }
-.container_info{
-  width: 95%;
-  margin: auto;
+.page{
+  padding: 55px 8%;
 }
-.container_info h2{
-  margin-top: 5%;
-  margin-bottom: 3%;
-  text-align: center;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
+.title{
+  font-weight: 500;
   font-size: 40px;
-  line-height: 48px;
+  line-height: 30px;
   color: #000000;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align: center;
 }
-.ads_content{
+.cards_wrapper{
+  margin: 45px 0;
   display: flex;
-  /* justify-content: space-between; */
+  align-items: center;
+  justify-content: space-between;
+  grid-gap: 15px;
   flex-wrap: wrap;
-
 }
